# pe_on_fastapi

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
pe_on_fastapi/: main.py
pe_on_fastapi/actions/: execution.py
pe_on_fastapi/routers/: executor.py
pe_on_fastapi/schemas/: execution.py
